nmsw-3892: fix layout issues in location macro.

--- a/src/public/stylesheets/custom.css
+++ b/src/public/stylesheets/custom.css
@@ -1,3 +1,7 @@
+.lat-long:invalid{
+    background-color:#ff9baf;
+}
+
 .autocomplete__wrapper {
   font-family: "GDS Transport", Arial, sans-serif;
 }
